--- a/index.html
+++ b/index.html
@@ -1,13 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Developer-Portfolio</title>
+    <!-- font style -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <!-- css style -->
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <!-- banner start -->
+    <section class="top-banner flexible-container">
+        <div class="half-width">
+            <h1>Welcome To</h1>
+            <h1> <span class="name-color">Fatema Akter</span> World!</h1>
+            <h3>Build Climber and Train Stopper</h3>
+            <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that
+                work.
+                That's why I am learning and mastering web development. I will not stop until I become the Web
+                Development
+                Hero.</p>
+            <a class="link_btn" target="_blank" href="https://www.linkedin.com/in/akter-fatema/">HIRE ME</a>
+        </div>
+        <div class="half-width">
+            <img src="images/nihan-bg.png" alt="">
+        </div>
+    </section>
+
+    <!-- Dream start -->
+    <section class="dream-bg flexible-container">
+        <div class="half-width">
+            <img src="images/fatema-bg.png" alt="">
+        </div>
+        <div class="half-width">
+            <h1>Dream Big</h1>
+            <h3>Become a web developer</h3>
+            <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how
+                to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
+
+            <a class="link_btn" target="_blank" href="https://www.linkedin.com/in/akter-fatema/">DOWNLOAD RESUME</a>
+        </div>
+    </section>
+
+    <!-- Experience area -->
+    <section class="experience-area">
+        <h1>Experiences</h1>
+        <div class="flexible-container">
+            <div id="full-stack-experience" class="experience-item">
+                <h2>Full Stack Web Developer</h2>
+                <h3 class="name-color">2021-Present | Pro Level Developer</h3>
+                <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function,
+                    efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called
+                    Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+            </div>
+            <div id="baby-experience" class="experience-item">
+                <h2>Baby Web Developer</h2>
+                <h3 class="name-color">2021-2021 | Programming Hero Learner</h3>
+                <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website
+                    andshowed it to them. They liked it. And uploaded the content. It was fun working at Programming
+                    Hero.</p>
+            </div>
+        </div>
+
+    </section>
+    <footer>
+        <p>© Fatema Akter 2021, a Programming Hero initiative.</p>
+    </footer>
 </body>
+
 </html>
